# Vulkan-GPU-Real-time-RayTracing-BS-Thesis-

./: .gitignore  CMakeLists.txt  README.md
scenes/: cornell_box_1.json  cornell_box_2.json  cornell_box_3.json  cornell_box_white.json  fig3_6_a.json  fig4_1.json  fig4_5.json  fig4_9.json  scene_spheres.json
shaders/: compile.sh  constants.comp.glsl  data_structures.comp.glsl  render.comp.glsl  render.comp.spv  sampling.comp.glsl  shading.comp.glsl  texture.frag.glsl  texture.frag.spv
source/: .directory  CMakeLists.txt  ComputeStage.cc  ComputeStage.hh  GraphicsStage.cc  GraphicsStage.hh  IOManager.cc  IOManager.hh  Materials.hh  RayEngine.cc  RayEngine.hh  StageBase.cc  StageBase.hh  Utils.cc  Utils.hh  VulkanEngine.cc  VulkanEngine.hh  core.hh  main.cc
source/Geometry/: Box.hh  CMakeLists.txt  Plane.hh  Rectangle.hh  Sphere.hh
source/Math/: CMakeLists.txt  MathUtils.hh  Matrix.cc  Matrix.hh  MatrixTransformations.cc  MatrixTransformations.hh  Quaternion.cc  Quaternion.hh  Vector.hh  def_vector.hh  def_vector.inl
source/Vulkan/: CMakeLists.txt  VulkanBuffer.hh  VulkanDevice.hh  VulkanInitializers.hh  VulkanSwapChain.cc  VulkanSwapChain.hh  VulkanTexture.hh  VulkanTools.cc  VulkanTools.hh  VulkanUIOverlay.cc  VulkanUIOverlay.hh
source/json/: CMakeLists.txt  Scene.cc  Scene.hh  json.hpp
